<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_favorite">Favorites</string>
    <string name="action_new">Add a Meal</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">Stampa la Pasta</string>

    <string name="btn_best_of">Best of</string>
    <string name="btn_pasta">Pasta</string>
    <string name="btn_printer">Printer</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <string name="dashboard_footer">Innovation Technology ® 2015</string>

    <string name="pastameal_label">Add your printed pasta meal</string>
    <string name="pastameal_description">What did it taste like?</string>

    <string-array name="ratings_array">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item></item>
    </string-array>

    <string-array name="material_array">
        <item>normal wheat</item>
        <item>gluten-free</item>
        <item>hard-wheat</item>
        <item>wholemeal</item>
    </string-array>

    <string-array name="amount_array">
        <item>15</item>
        <item>14</item>
        <item>13</item>
        <item>12</item>
        <item>11</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item></item>
    </string-array>

</resources>
