<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MealListActivity">
    <item
        android:id="@+id/menu_title"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="hi"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh">
    </item>
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_action_favorite"
        android:showAsAction="ifRoom"
        android:title="@string/action_favorite">
    </item>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/action_new">
    </item>
</menu>
